# GasCore-Core

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  todo.txt
src/cpp/main/gas/: Config.cpp  Config.hpp  EmptyTask.cpp  EmptyTask.hpp  Object.cpp  Object.hpp  Ptr.cpp  Ptr.hpp  Ptr_impl.hpp  Rec.cpp  Ref.hpp  Ref_impl.hpp  Task.hpp  Thread.cpp  Thread.hpp  types.hpp  utils.cpp  utils.hpp
src/cpp/main/gas/coll/: Array.hpp  ArrayList.hpp  Collection.cpp  Collection.hpp  Iterable.cpp  Iterable.hpp  Iterator.hpp  List.hpp
src/cpp/main/gas/impl/: ThreadImpl.cpp  ThreadImpl.hpp  UnixThreadImpl.cpp  UnixThreadImpl.hpp  WinThreadImpl.cpp  WinThreadImpl.hpp
src/cpp/main/gas/str/: MergedText.cpp  MergedText.hpp  String.cpp  String.hpp  StringDecorator.cpp  StringDecorator.hpp  Text.cpp  Text.hpp  str.cpp  str.hpp  str_editor.cpp  str_editor.hpp
src/cpp/main/gas/test/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  Logger.cpp  Logger.hpp  NullLogger.cpp  NullLogger.hpp  RichTestCase.cpp  RichTestCase.hpp  SafeTestCase.cpp  SafeTestCase.hpp  TestCase.cpp  TestCase.hpp  TestCaseDecorator.cpp  TestCaseDecorator.hpp  TestCaseState.cpp  TestCaseState.hpp  (+2 more)
src/cpp/test/: ArrayListTestCase.cpp  ArrayListTestCase.hpp  ArrayTestCase.cpp  ArrayTestCase.hpp  FileLoggerTestCase.cpp  FileLoggerTestCase.hpp  Mock.cpp  Mock.hpp  MockTestCase.cpp  MockTestCase.hpp  PtrTestCase.cpp  PtrTestCase.hpp  RefTestCase.cpp  RefTestCase.hpp  TextTestCase.cpp  TextTestCase.hpp  ThreadTestCase.cpp  ThreadTestCase.hpp  str_test_case.cpp  str_test_case.hpp  test.cpp
(+2 files in other folders)
